2017-11-20         Arnold D. Robbins     <arnold@skeeve.com>

	* nl_langinfo.c (do_nl_langinfo): Update to gawk 4.2 API.
	(func_table): Same.

2017-10-07         Andrew J. Schorr     <ajschorr@fedoraproject.org>

	* packaging/gawk-nl_langinfo.spec.in: Change email address in changelog.

2016-07-30         Andrew J. Schorr     <aschorr@telemetry-investments.com>

	* packaging/gawk-nl_langinfo.spec.in: Use %{url} in Source0.

2016-07-23         Andrew J. Schorr     <aschorr@telemetry-investments.com>

	* nl_langinfo.c: Fix FSF address.
	* packaging/gawk-nl_langinfo.spec.in: Upgrade to Fedora standards.

2016-07-22         Andrew J. Schorr     <aschorr@telemetry-investments.com>

	* packaging/gawk-nl_langinfo.spec.in: Fix some rpmlint complaints.

2015-06-03         Andrew J. Schorr      <aschorr@telemetry-investments.com>

	* doc/nl_langinfo.3am: Yet another fix to the example.  Now it should
	be correct.
	* configure.ac (AC_INIT): Bump version.
	* NEWS: Update for new release.

2015-06-01         Andrew J. Schorr      <aschorr@telemetry-investments.com>

	* doc/nl_langinfo.3am: Fix typo.

2015-06-01         Arnold D. Robbins     <arnold@skeeve.com>

	* Further improvements, including the test suite.

2015-05-31         Arnold D. Robbins     <arnold@skeeve.com>

	* First version.